--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,5 +1,11 @@
 name: CICD
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
@@ -7,7 +13,7 @@ jobs:
 
     steps:
     - name: Start Tracee profiling in background
-      uses: aquasecurity/tracee-action@f52623066faf2e8dc4b4057bbedb8969bf62d52a
+      uses: aquasecurity/tracee-action@2b27a30492668b126096051d64dbf53569db32b0
 
     - uses: actions/checkout@v2
 
