--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -7,6 +7,14 @@ on:
     branches:
       - main
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+  security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
