--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,4 +1,4 @@
-name: CICD
+name: 02.01 Compromised CICD
 on:
   push:
     branches:
@@ -6,7 +6,6 @@ on:
   pull_request:
     branches:
       - main
-
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: write
@@ -17,31 +16,25 @@ permissions:
 
 jobs:
   build:
+    name: Cicd compromised
     runs-on: ubuntu-latest
-
     steps:
-    - name: Start Tracee profiling in background
-      uses: aquasecurity/tracee-action@2b27a30492668b126096051d64dbf53569db32b0
-
-    - uses: actions/checkout@v2
-
-    - name: Setup Go
-      uses: actions/setup-go@v2
-
-    - name: Verify dependencies
-      run: go mod verify
-
-    - name: Run tests
-      run: go test -race -vet=off ./...
-
-    - name: Build
-      run: go build -o app -v ./...
-
-    - name: Fake upload
-      uses: josedonizetti/upload-fake-action@v0.1.0
-
-    - name: Stop and Check Tracee results and create a PR
-      uses: aquasecurity/tracee-action@ce4a8e48ea62953976e7e10fcd83344bb85d132a
-      with:
-        create-pr: "false"
-        fail-on-diff: "true"
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Start Tracee profiling in background
+        uses: aquasecurity/tracee-action@c04dacc040ec9a32ef10150c0ca442d311ec28fd
+          #  - name: Use Node.js
+   #     uses: actions/setup-node@v3
+  #      with:
+ #         node-version: 18.x
+  #    - name: Build
+   #     run: npm run build
+    #    working-directory: ./my-app
+      - name: Render Pages
+        run: |
+          echo '<div><img src="https://media.tenor.com/rePDfDWO3XoAAAAd/hacking.gif" width="518" height="388.5" alt="Hacking GIF - Hacking GIFs" style="max-width: 518px;"></div><p><h2>You Have Been Pwned!</h2>' > my-app/README.md
+      - name: Stop and Check Tracee results and create a PR
+        uses: aquasecurity/tracee-action@ce4a8e48ea62953976e7e10fcd83344bb85d132a
+        with:
+          create-pr: "true"
+          fail-on-diff: "false"
